Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76408

QNetworkInterface::type() doesn't always return the correct interface type on macOS 10.14.5

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 5.13
    • 5.13.0 Beta4
    • Network
    • None
    • 375f56506089f98118aa1848ed9f05a35e212c90

      It seems like Apple has changed something in the network infrastructure. Code compiled with Qt 5.13.0 Beta4 works correctly in 10.14.2 and reports the correct interface type for all network interfaces.

      When the networkinterfaces is retrieved for the first time the type is correct and shows e.g. Wifi or Ethernet. The second time the same interfaces are of type "unkown"

      Attached an small example which retrieves the networkinterfaces and prints them with their type in two for loops

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            heimrich Karsten Heimrich
            gagi Dominik Holland
            Votes:
            2 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes